fixes img stretch and cleans up spacing

--- a/server/public/css/styles.css
+++ b/server/public/css/styles.css
@@ -117,7 +117,8 @@ nav.navBarCourse {
 
 .course-page img {
   margin-left: 30px;
-  border-radius: 500px; }
+  border-radius: 500px;
+  object-fit: cover; }
 
 .home-page {
   /*nav*/
